# Trade-with-backtest

./: .gitignore  README.md  app.py  backtest_engine.py  broker_credentials.db  database.py  docker-compose.yml  nse_stock_cache.json  nse_stocks.py  pyproject.toml  requirements.txt  strategies.py
broker/: __init__.py  angel.py  base.py  manager.py  upstox.py  zerodha.py
