[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-market-backtester"
version = "1.0.0"
description = "Indian Stock Market Backtester & Live Trader with Broker Integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.28.0",
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
    "kiteconnect>=4.0.0",
    "smartapi-python>=1.0.0",
    "pyotp>=2.6.0",
    "upstox-python-sdk>=2.28.0",
    "websocket-client>=1.6.0",
    "pycryptodome>=3.19.0",
]

[project.scripts]
backtest = "app:main"

[tool.streamlit]
runner.magicEnabled = false
